fixed filter-wrapper top position. Still struggling with conflict between overflow:hidden and Sticky positions 'T.T'

--- a/src/Stylesheets/App.css
+++ b/src/Stylesheets/App.css
@@ -50,7 +50,7 @@
 html,
 body {
   max-width: 100%;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 html {
